CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(statemachine)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})


set (CMAKE_CXX_STANDARD 11)

SET(STATEMACHINE_SRC 
	test.cpp
        event.hpp
        event.cpp
        state.hpp
        state.cpp
	statemachine.hpp
        statemachine.cpp
)


ADD_EXECUTABLE(example ${STATEMACHINE_SRC})

